Filtering by title or a single word; removing by ID panel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Spisek</string>
     <string name="title_home">Wyszukaj</string>
     <string name="title_add">Dodaj</string>
-    <string name="title_info">Informacje</string>
+    <string name="title_info">Usuń</string>
     <string name="title_activity_add">Add</string>
 
     <!-- TODO: Remove or change this placeholder text -->
