Icon added; layout constraint and filling screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
         <item>Pomarańczowy segregator</item>
         <item>Niebieski Oli Ptaszyńskiej</item>
         <item>Exultate Deo</item>
-        <item>Czerwony białostocki</item>
+        <item>Białostocki</item>
         <item>Muzykolekcje</item>
         <item>Matce Słuchającej</item>
         <item>Przyjaciół Oblubieńca</item>
