--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
         <item>Niebieski Oli Ptaszyńskiej</item>
         <item>Białostocki</item>
         <item>Muzykolekcje</item>
+        <item>Nuty</item>
     </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
